Fix alignment (clean layout wip)

--- a/cubedash/static/base.css
+++ b/cubedash/static/base.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url(normalise.css);
 body { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; background: linear-gradient(to bottom, #bababa 90px, #e0e0e0 800px); min-height: calc(100vh - 50px); color: #212121; font-size: 0.86em; margin: 30px auto; padding: 52px 20px; max-width: 1024px; }
 
@@ -14,7 +15,7 @@ header { color: #efefef; padding: 0; width: fit-content; display: flex; flex-dir
 .header-option { background-color: #474747; position: relative; border-collapse: collapse; vertical-align: bottom; }
 .header-option li.selected a { color: #EEAF30; }
 .header-option > div { padding: 0 30px; margin: 15px 0; line-height: 2em; flex: 1 1; }
-.header-option > div strong { display: block; }
+.header-option > div::after { content: " ▾"; }
 .header-option ul { display: none; margin: 0; padding: 0; list-style: none; }
 .header-option li { margin: 0; background-color: #545454; }
 .header-option li:hover { background-color: #616161; }
@@ -205,12 +206,12 @@ label { text-transform: uppercase; letter-spacing: 1px; font-size: 10px; color: 
 
 .map-panel { width: 100%; }
 
-#map { width: 100%; height: calc(100vh - 100px); }
+#map { flex: 1 1; height: calc(100vh - 100px); }
 #map .summary-control { background: rgba(84, 84, 84, 0.9); color: #fff; padding: 15px 15px; }
 #map .summary-control a { color: #fff0f0; }
 
 @media (min-width: 800px) { .panels { display: flex; }
-  .info-panel { width: 25%; } }
+  .info-panel { width: 250px; } }
 .info-panel ul { list-style-type: none; padding: 0; }
 
 .message-box { position: absolute; left: calc(50% - 100px); top: 90px; width: 200px; text-align: center; z-index: 9999; background: #545454; padding: 13px 15px; color: #fff; }
